plugins {
    alias(libs.plugins.androidApplication)
    id "com.google.protobuf" version "0.9.6"
    id "com.google.dagger.hilt.android"
}

android {
    namespace 'com.kimikevin.elapunte'
    compileSdk 36

    defaultConfig {
        applicationId "com.kimikevin.elapunte"
        minSdk 30
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        Properties properties = new Properties()
        properties.load(project.rootProject.file("local.properties").newDataInputStream())

        buildConfigField "String", "GRPC_HOST", "\"${properties.getProperty("GRPC_HOST")}\""

        manifestPlaceholders = [grpcHost: properties.getProperty("GRPC_HOST")]
        resourceConfigurations += ['en', 'fr', 'es', 'zh', 'de', 'ja', 'ru', 'ko', 'pt', 'in']
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures{
        dataBinding true
        buildConfig true
    }
}

dependencies {
    def room_version = "2.6.1"

    annotationProcessor "androidx.room:room-compiler:$room_version"

    implementation libs.room.runtime
    implementation libs.core.splashscreen
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout

    // gRPC & Protobuf for Android
    implementation libs.grpc.okhttp  // Uses OkHttp for network
    implementation libs.grpc.protobuf.lite  // The "Lite" version
    implementation libs.grpc.stub
    implementation libs.javax.annotation

    // hilt
    implementation libs.hilt.android
    annotationProcessor libs.hilt.compiler

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.25.1"
        plugins {
            create("grpc") {
                artifact = "io.grpc:protoc-gen-grpc-java:1.79.0"
            }
            create("javalite") {
                // The "Lite" generator for Android
                artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
            }
        }
        generateProtoTasks {
            all().forEach { task ->
                task.builtins {
                    create("java"){
                        option("lite") // FORCE Java Lite output
                    }
                }
                task.plugins {
                    create("grpc") {
                        option("lite") // FORCE gRPC Lite output
                    }
                }
            }
        }
    }
}
